--- a/SVM Rularization Hyperparameter Tune - IRIS dataset.ipynb
+++ b/SVM Rularization Hyperparameter Tune - IRIS dataset.ipynb
@@ -5,7 +5,12 @@
    "id": "149f2f14",
    "metadata": {},
    "source": [
-    "### Implementing the Decision Tree on IRIS datast"
+    "### Machine Learning BDA 500\n",
+    "### Anna Jazayeri\n",
+    "### Assignment 2\n",
+    "### IRIS datast\n",
+    "\n",
+    "#### Importing relevant libraries"
    ]
   },
   {
@@ -16,9 +21,6 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from sklearn.tree import DecisionTreeClassifier \n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import accuracy_score, classification_report, confusion_matrix\n",
     "from sklearn.datasets import load_iris"
    ]
   },
@@ -27,12 +29,12 @@
    "id": "af56ea8f",
    "metadata": {},
    "source": [
-    "<span style=\"color:blue\">**Step 1: Importing the IRIS dataset and after that I will implement CART in this dataset.**</span>"
+    "### Importing the IRIS dataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "bea6a1d4",
    "metadata": {},
    "outputs": [
@@ -188,24 +190,20 @@
        "[150 rows x 5 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from sklearn.datasets import load_iris\n",
-    "\n",
-    "# Loading the iris\n",
-    "iris = load_iris()\n",
-    "\n",
-    "# puting the iris in a dataframe\n",
-    "iris_df = pd.DataFrame(data=iris.data, columns=iris.feature_names)\n",
-    "\n",
-    "# Add the target column to the DataFrame\n",
-    "iris_df['target'] = iris.target\n",
-    "\n",
-    "iris_df"
+    "# commenting the relavant library for my own record\n",
+    "# from sklearn.datasets import load_iris\n",
+    "iris_dataset = load_iris()\n",
+    "# creating a dataframe\n",
+    "iris_dataframe = pd.DataFrame(data=iris_dataset.data, columns=iris_dataset.feature_names)\n",
+    "# indicating the target column\n",
+    "iris_dataframe['target'] = iris_dataset.target\n",
+    "iris_dataframe"
    ]
   },
   {
@@ -213,8 +211,57 @@
    "id": "b4725f52",
    "metadata": {},
    "source": [
-    "<span style=\"color:blue\">**NOTE: In this dataframe we have \"target\" column that it is numeric values that actually are represents each of the flowers name in this dataset, 0 is for setosa, 1 is for versicolor and 2 represents of virginica.**</span>"
+    "### Explanation:\n",
+    "    This table has a column called \"target\" with numbers that stand for different types of flowers. For example, 0 means \"setosa,\" 1 means \"versicolor,\" and 2 means \"virginica.\"\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "66d2cd29",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8a05e599",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3eb0303d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a6995d95",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e5523559",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6f5bfc41",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
