--- a/SVM Support Vector Mchine - IRIS dataset.ipynb
+++ b/SVM Support Vector Mchine - IRIS dataset.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 87,
    "id": "2344f4d3",
    "metadata": {},
    "outputs": [],
@@ -44,6 +44,8 @@
     "import numpy as np\n",
     "from sklearn.metrics import roc_curve, auc\n",
     "from sklearn.preprocessing import label_binarize\n",
+    "import time\n",
+    "from sklearn.decomposition import PCA\n",
     "import warnings\n",
     "# Ignore all future warnings\n",
     "warnings.simplefilter(action='ignore', category=FutureWarning)"
@@ -59,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 66,
    "id": "bea6a1d4",
    "metadata": {},
    "outputs": [],
@@ -83,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 67,
    "id": "8a05e599",
    "metadata": {},
    "outputs": [
@@ -239,7 +241,7 @@
        "[150 rows x 5 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -259,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 68,
    "id": "3eb0303d",
    "metadata": {},
    "outputs": [
@@ -297,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 69,
    "id": "e5523559",
    "metadata": {},
    "outputs": [
@@ -420,7 +422,7 @@
        "max            2.500000    2.000000  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -431,7 +433,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1fefb0a8",
+   "id": "91fa1df8",
    "metadata": {},
    "source": [
     "#### Missing values:"
@@ -439,8 +441,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "3f4117a6",
+   "execution_count": 70,
+   "id": "3298b4c3",
    "metadata": {},
    "outputs": [
     {
@@ -454,7 +456,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -466,8 +468,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "648fb8fa",
+   "execution_count": 71,
+   "id": "6998957d",
    "metadata": {},
    "outputs": [
     {
@@ -476,7 +478,7 @@
        "False"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -487,7 +489,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5520bea7",
+   "id": "e7111caf",
    "metadata": {},
    "source": [
     "#### Result: There is no missing values or null values in dataset. "
@@ -495,7 +497,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "79cf4eb6",
+   "id": "75a7c08e",
    "metadata": {},
    "source": [
     "#### ouliers:"
@@ -503,8 +505,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "24f2d5d4",
+   "execution_count": 72,
+   "id": "b5c82dc2",
    "metadata": {},
    "outputs": [
     {
@@ -531,8 +533,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "id": "4e713e72",
+   "execution_count": 73,
+   "id": "2fafb5d5",
    "metadata": {},
    "outputs": [
     {
@@ -621,7 +623,7 @@
        "60       1  "
       ]
      },
-     "execution_count": 44,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -643,8 +645,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "id": "d901e0f9",
+   "execution_count": 74,
+   "id": "309b0334",
    "metadata": {},
    "outputs": [
     {
@@ -686,7 +688,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1938c0cc",
+   "id": "3cfaf4cc",
    "metadata": {},
    "source": [
     "#### Reslut: Based on the above box plots and using quantiles we had some outliers that I removed them before further analysis. "
@@ -703,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 75,
    "id": "5ce234e8",
    "metadata": {},
    "outputs": [
@@ -743,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 76,
    "id": "0b6c6b6a",
    "metadata": {},
    "outputs": [],
@@ -758,7 +760,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec59f9f9",
+   "id": "72690bca",
    "metadata": {},
    "source": [
     "## Checking the scale of columns in order to use them in SVM."
@@ -766,8 +768,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
-   "id": "67e79a3a",
+   "execution_count": 77,
+   "id": "3538d654",
    "metadata": {},
    "outputs": [
     {
@@ -792,7 +794,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cbddccdc",
+   "id": "12ceafb9",
    "metadata": {},
    "source": [
     "### Result: because the scale of columns are different it is necessary to use standardization before SVM."
@@ -808,7 +810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 78,
    "id": "bd166cfd",
    "metadata": {},
    "outputs": [],
@@ -829,7 +831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 79,
    "id": "fff4d357",
    "metadata": {},
    "outputs": [
@@ -883,7 +885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 80,
    "id": "ecbe5e3d",
    "metadata": {},
    "outputs": [
@@ -979,7 +981,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 81,
    "id": "08c6dfd8",
    "metadata": {},
    "outputs": [
@@ -1056,7 +1058,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 82,
    "id": "fc226177",
    "metadata": {},
    "outputs": [
@@ -1110,7 +1112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 83,
    "id": "3a52fb5c",
    "metadata": {},
    "outputs": [
@@ -1166,7 +1168,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d748eca",
+   "id": "22444522",
    "metadata": {},
    "source": [
     "## Using ROC curve for evaluating the performance of each classifier."
@@ -1174,7 +1176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 84,
    "id": "8be41daf",
    "metadata": {
     "scrolled": false
@@ -1327,7 +1329,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0dec2269",
+   "id": "503c7484",
    "metadata": {},
    "source": [
     "## Result: Comparison and find the best fit for prediction:\n",
@@ -1346,8 +1348,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
-   "id": "002e5884",
+   "execution_count": 85,
+   "id": "f836cd20",
    "metadata": {},
    "outputs": [
     {
@@ -1367,7 +1369,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8ff5a3cd",
+   "id": "3200892b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "82727cb9",
    "metadata": {},
    "outputs": [],
    "source": []
